fixing centering on mobile

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -66,6 +66,12 @@ body {
     font-weight: bold;
 }
 
+div.center {
+
+  text-align: center;
+  
+}
+
 .publication-awards {
     color: #ff3860;
     width: fit-content;
